--- a/learnloop/pubspec.yaml
+++ b/learnloop/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  url_launcher: ^6.0.20
+  animated_text_kit: ^4.2.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
