--- a/learnloop/pubspec.yaml
+++ b/learnloop/pubspec.yaml
@@ -31,9 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   url_launcher: ^6.0.20
-  animated_text_kit: ^4.2.2
   supabase_flutter: ^1.0.0
-
+  image_picker: ^0.8.7+5
 
 
   # The following adds the Cupertino Icons font to your application.
