--- a/learnloop/pubspec.yaml
+++ b/learnloop/pubspec.yaml
@@ -32,11 +32,14 @@ dependencies:
     sdk: flutter
 
 
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.8.2
   url_launcher: ^6.3.1
+  image_picker: ^0.8.7+5
 
 
 dev_dependencies:
