--- a/learnloop/pubspec.yaml
+++ b/learnloop/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   supabase_flutter: ^2.8.2
   url_launcher: ^6.3.1
   image_picker: ^0.8.7+5
+  webview_flutter: ^4.10.0
+
 
 
 dev_dependencies:
