--- a/learnloop/pubspec.yaml
+++ b/learnloop/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   url_launcher: ^6.3.1
   image_picker: ^0.8.7+5
   webview_flutter: ^4.10.0
-
+  fluttertoast: ^8.1.7
 
 
 dev_dependencies:
