--- a/learnloop/pubspec.yaml
+++ b/learnloop/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   image_picker: ^0.8.7+5
   webview_flutter: ^4.10.0
   fluttertoast: ^8.1.7
-
+  marquee: ^2.3.0
 
 dev_dependencies:
   flutter_test:
