--- a/learnloop/android/build.gradle
+++ b/learnloop/android/build.gradle
@@ -1,3 +1,18 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // Add this line for Google services
+         //classpath 'com.google.gms:google-services:4.4.2'
+         // classpath 'com.google.gms.google-services:4.4.2'
+        classpath 'com.google.gms:google-services:4.4.2'
+    }
+}
+
+
+
 allprojects {
     repositories {
         google()
