--- a/learnloop/pubspec.yaml
+++ b/learnloop/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   marquee: ^2.3.0
   pie_chart: ^5.4.0
   blinking_text: ^1.0.4
-
+  flutter_pdfview: ^1.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
