--- a/learnloop/pubspec.yaml
+++ b/learnloop/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   intl: ^0.20.1
   file_picker: ^8.1.7
   flutter_pdfview: ^1.4.0
+  blinking_text: ^1.0.4
 
 
 dev_dependencies:
@@ -78,8 +79,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+  - assets/pic.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
