--- a/learnloop/pubspec.yaml
+++ b/learnloop/pubspec.yaml
@@ -57,7 +57,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: ^0.12.0
 
 
 
@@ -82,7 +82,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -115,7 +115,7 @@ flutter:
 #  ios: "AppIcon"
 #  image_path: "assets/icon/icon.png"
 #  min_sdk_android: 21
-#flutter_icons:
-#  android: true
-#  ios: true
-#  image_path: "assets/appicon.png"
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/applogo.jpg"
